@@ -4,6 +4,7 @@ This file documents the revision history for Perl extension Mojolicious.
   - Improved makefile and plugin generators to always use the latest
     Mojolicious version.
   - Improved documentation.
+  - Improved tests.
   - Fixed HTTPS proxy support in Mojo::UserAgent.
   - Fixed multiple Mojo::UserAgent::Transactor bugs.
 
